deploy/base/postgresql-entry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-rw
spec:
  selector: {app: postgresql-entry}
  ports:
    - {name: pg, port: 5432, targetPort: pg}
    - {name: pg-pool, port: 6432, targetPort: pg-pool}
